--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <p>I'm</p>
                                 <h1>Afoma Nkamnebe</h1>
                                 <h2></h2>
-                                <div class="typed-text">Virtual Assistant, Technical Support, Network Administrator, Cloud security Engineer, DevOps Engineer</div>
+                                <div class="typed-text">Virtual Assistant, Technical Support, Network administrator, Cloud Security Engineer, Devops Engineer</div>
                             </div>
                             <div class="hero-btn">
                                 <a class="btn" href="">Hire Me</a>
@@ -71,8 +71,8 @@
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 d-none d-md-block">
-                        <div class="hero-image">
-                            <img src="img/FB_IMG_1503096869818 (1).jpg" alt="Hero Image">
+                        <div class="FB -image">
+                            <img src="img/FB.jpg" alt="FB Image">
                         </div>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                         <div class="about-content">
                             <div class="section-header text-left">
                                 <p>Learn About Me</p>
-                                <h2>10 Years Experience</h2>
+                                <h2>5 Years Experience</h2>
                             </div>
                             <div class="about-text">
                                 <p>
@@ -152,7 +152,7 @@
                             <div class="service-text">
                                 <h3>Virtual Assistant</h3>
                                 <p>
-                                    Provide executive assistant and admin support to busy professional with a broad knowledge in project management, social media management, financial recordkeeping, Data analysis and team management. I provide all round service, saving you time to focus on what matter most
+                                   Provide busy executive and professionals with admin support with a broad knowledge  in project management, social media management, financial recordkeeping, Data analysis and team management. I provide all round service, saving you time to focus on what matter most
                                 </p>
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                             <div class="service-text">
                                 <h3>Technical Support</h3>
                                 <p>
-                                    5+ years in customer service, have developed strategies to meet customer technical needs. you can term me a 'Customer Whisperer' can handle irate and build rapport with client, making sure their concern are taken care of.
+                                    5+ years in customer service, have developed strategies to meet customer technical needs. You can called me a 'Customer Whispere' can handle irate and build rapport wih clients, making sure their concern id met.
                                 </p>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                             <div class="service-text">
                                 <h3>Network Administrator</h3>
                                 <p>
-                                    A certified Cisco CCNA administrator can help you plan & setup your infrastructure both on-premises and cloud.
+                                    A certified Cisco CCNA administrator can help plan and setup your netowrk structure.
                                 </p>
                             </div>
                         </div>
@@ -189,9 +189,9 @@
                                 <i class="fab fa-apple"></i>
                             </div>
                             <div class="service-text">
-                                <h3>Cloud Security</h3>
+                                <h3>Cloud security</h3>
                                 <p>
-                                    A certified Azure, GCP and Aws cloud engineer, I help organization safeguard their infrastructure in the cloud.
+                                    A certified cloud security engineer in AWS, Azure and GCP. I help organization safeguard their infrastructure in Cloud.
                                 </p>
                             </div>
                         </div>
@@ -213,8 +213,8 @@
                     <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
                             <div class="timeline-date">2019 - 2021</div>
-                            <h2>Virtual Assitant</h2>
-                            <h4>Rich tide, Denver, CO</h4>
+                            <h2>Virtual Assistant</h2>
+                            <h4>Rich Gold, Colorado, USA</h4>
                             <p>
                                 handled administrative tasks such as managing schedules, organizing files, responding to emails, and coordinating appointments to streamline business operations. Provide client support through communication channels like phone, email, or chat and also manage CRM systems and perform data entry. With strong organizational and time management skills.
                             </p>
@@ -224,7 +224,7 @@
                         <div class="timeline-text">
                             <div class="timeline-date">2021 - 2023</div>
                             <h2>Technical Support</h2>
-                            <h4>Computer Hub, San Francisco, CA</h4>
+                            <h4>Computer Village, Georgia, USA</h4>
                             <p>
                                 assisted users in resolving technical issues with hardware, software, or services, ensuring smooth functionality and user satisfaction. Key responsibilities include troubleshooting problems, providing step-by-step solutions, and escalating complex issues to advanced teams when necessary.
                             </p>
@@ -234,7 +234,7 @@
                         <div class="timeline-text">
                             <div class="timeline-date">2024 - Present</div>
                             <h2>Network administrator</h2>
-                            <h4>Digital Witch, Abuja, NGN</h4>
+                            <h4>Digital Witch, Abuja, Nigeria</h4>
                             <p>
                                 manages and maintains the organization's computer networks, ensuring reliable connectivity and system performance. Duties include configuring and troubleshooting network hardware, monitoring network security, and implementing updates to optimize functionality. I also oversee data backups and ensure business continuity by minimizing downtime.
                             </p>
@@ -243,10 +243,10 @@
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                         <div class="timeline-text">
                             <div class="timeline-date">2024 - Present</div>
-                            <h2>Cloud Security</h2>
-                            <h4>Digital Witch, Abuja, NGN</h4>
+                            <h2>Cloud Security Engineer</h2>
+                            <h4>Digital Witch, Abuja, Nigeria</h4>
                             <p>
-                                designs and implements security measures to protect cloud-based systems and data. Duties include configuring security controls, monitoring for vulnerabilities, and responding to threats to maintain compliance and safeguard cloud infrastructure. They also collaborate with teams to enforce best practices for secure application deployment and access management.
+                                Designs, implements security measure to protect cloud-based systems and data.
                             </p>
                         </div>
                     </div>
